RESOLVED FIXED292415
Fix HTMLVideoElement poster zoom issue
https://bugs.webkit.org/show_bug.cgi?id=292415
Summary Fix HTMLVideoElement poster zoom issue
Ahmad Saleem
Reported 2025-05-01 18:57:39 PDT
Created attachment 475114 [details] Test Case - from Chromium Bug Tracker Hi Team, While going through RenderVideo specific commit in Blink, I came across another potential issue, where Safari / WebKit is currently failing. Blink Commit: https://chromium.googlesource.com/chromium/src/+/75dc85b2a87137b90854ff8b3a16ed6da5081ac8 *** Steps to Reproduces *** 1) Open Test Case 2) Cmd + + to zoom in and notice that `poster` image go out of sync *** Expected Result *** It should not go out of sync. _____________ Just raising so we can fix it. Thanks!
Attachments
Test Case - from Chromium Bug Tracker (1002 bytes, text/html)
2025-05-01 18:57 PDT, Ahmad Saleem
no flags
Ahmad Saleem
Comment 1 2025-05-01 19:08:33 PDT
It works fine in Firefox Nightly 140 and Chrome Canary 138. So adding `BrowserCompat` keyword.
Radar WebKit Bug Importer
Comment 2 2025-05-08 18:58:12 PDT
Ahmad Saleem
Comment 3 2026-01-08 12:56:21 PST
EWS
Comment 4 2026-01-09 00:45:18 PST
Committed 305347@main (b0f444c6149c): <https://commits.webkit.org/305347@main> Reviewed commits have been landed. Closing PR #56281 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.