Fix double-zoom issue with video poster images https://bugs.webkit.org/show_bug.cgi?id=292415 rdar://150976146

Reviewed by Brent Fulgham.

Inspired by: https://chromium.googlesource.com/chromium/src/+/75dc85b2a87137b90854ff8b3a16ed6da5081ac8

m_cachedImageSize already contains zoom-scaled dimensions when cached in
imageChanged(). Applying zoom again in calculateIntrinsicSize() caused
poster images to be incorrectly double-scaled.

Move poster size handling to calculateIntrinsicSize() to return the
cached size directly without additional scaling. Only apply zoom to
unscaled sizes from calculateIntrinsicSizeInternal().

* Source/WebCore/rendering/RenderVideo.cpp:
(WebCore::RenderVideo::calculateIntrinsicSizeInternal):
(WebCore::RenderVideo::calculateIntrinsicSize):
* LayoutTests/fast/css/video-poster-zoom-expected.txt: Added.
* LayoutTests/fast/css/video-poster-zoom.html: Added.

Canonical link: https://commits.webkit.org/305347@main